--- a/app/views/liked_trips/index.html.erb
+++ b/app/views/liked_trips/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      List of all liked trips
+      List of your liked trips
     </h1>
   </div>
 </div>
@@ -11,28 +11,13 @@
 <div>
   <div>
     <h2>
-      Add a new liked trip
+      Discover more Beerbnbs
     </h2>
 
-    <form action="/insert_liked_trip" method="post">
-      <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id">
-      </div>
-
-      <div>
-        <label for="trip_id_box">
-          Trip
-        </label>
-
-        <input type="text" id="trip_id_box" name="query_trip_id">
-      </div>
+    <form action="/new_trip" method="post">
 
       <button>
-        Create liked trip
+        Let's Go
       </button>
     </form>
   </div>
