--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
   <div class="container">
     <a class="navbar-brand" href="/">
-      FinalProject
+      Beerbnb
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsible-nav-links" aria-controls="collapsible-nav-links" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,20 +12,14 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Resources
+            My Beerbnbs
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a href="/liked_trips" class="dropdown-item">
-              Your Liked Trips
+              Saved Beerbnbs
             </a>
-            <a href="/trips" class="dropdown-item">
-              Trips
-            </a>
-            <a href="/bars" class="dropdown-item">
-              Bars
-            </a>
-            <a href="/airbnbs" class="dropdown-item">
-              Airbnbs
+            <a href="/user_profile_sign_out" class="dropdown-item">
+              Log Out
             </a>
           </div>
         </li>
