--- a/app/views/liked_trips/show.html.erb
+++ b/app/views/liked_trips/show.html.erb
@@ -10,77 +10,53 @@
           Go back
         </a>
       </div>
-
-      <div>
-        <a href="/delete_liked_trip/<%= @the_liked_trip.id %>">
-          Delete liked trip
-        </a>
-      </div>
     </div>
-
-    <dl>
-      <dt>
-        User
-      </dt>
-      <dd>
-        <%= @the_liked_trip.user_id %>
-      </dd>
-
-      <dt>
-        Trip
-      </dt>
-      <dd>
-        <%= @the_liked_trip.trip_id %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_liked_trip.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_liked_trip.updated_at) %> ago
-      </dd>
-    </dl>
   </div>
 </div>
 
 <hr>
 
+<div class="container">
+  <div class="row">
+    <div class="col">
+        <p style="text-align:center;"><img style="max-width: 450px; max-height: 300px" src="<%= @beerbnb_air.photo %>" alt="airbnb.img"></p>
+    </div>
+    <div class="col">
+        <p style="text-align:center;"><img style="max-width: 450px; max-height: 300px" src="<%= @beerbnb_bar.photo %>" alt="bar.img"></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+          <p style="text-align:left;">Price: $<%= @beerbnb_air.price %>0 </p>
+    </div>
+    <div class="col">
+          <p style="text-align:left;">Name: <%= @beerbnb_bar.name %></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+          <p style="text-align:left;"> Location: <%= @beerbnb_air.location %> </p>
+    </div>
+    <div class="col">
+          <p style="text-align:left;"> Location: <%= @beerbnb_bar.location %></p>
+    </div>
+  </div>
+  <div class="row">
+    <div style="text-align:left;" class="col">
+      <a href="<%= @beerbnb_air.website %>"> Airbnb Details </a>
+    </div>
+    <div style="text-align:left;" class="col">
+      <a href="<%= @beerbnb_bar.website %>"> Bar Details </a>
+    </div>
+  </div>
+</div>
 
-<div>
+<hr>
+
   <div>
-    <h2>
-      Edit liked trip
-    </h2>
-
-    <form action="/modify_liked_trip/<%= @the_liked_trip.id %>"  method="post" >
-      <div>
-        <label for="user_id_box">
-          User
-        </label>
-
-        <input type="text" id="user_id_box" name="query_user_id" value="<%= @the_liked_trip.user_id %>">
-      </div>
-
-      <div>
-        <label for="trip_id_box">
-          Trip
-        </label>
-
-        <input type="text" id="trip_id_box" name="query_trip_id" value="<%= @the_liked_trip.trip_id %>">
-      </div>
-
-      <button>
-        Update liked trip
-      </button>
-    </form>
+    <a href="/delete_liked_trip/<%= @the_liked_trip.id %>">
+      <button type="button" class="btn btn-danger">
+        Delete this Beerbnb
+      </button>     
+    </a>
   </div>
-</div>
-
-<hr>
