--- a/app/views/trips/index.html_copy_2.erb
+++ b/app/views/trips/index.html_copy_2.erb
@@ -42,6 +42,7 @@
       <a href="<%= @beerbnb_bar.website %>"> Bar Details </a>
     </div>
   </div>
+
 </div>
 
 <hr>
@@ -50,16 +51,15 @@
 <div class="container">
   <div class="row">
     <div style="text-align:right;" class="col">
-      <a href ="/beerme">
+      <form action="/new_trip" method="post">
         <button type="button" class="btn btn-danger">
           No
         </button>
-      </a>
+      </form>
     </div>
     <div class="col">
       <form action="/insert_liked_trip" method="post">
-        <button type="submit" class="btn btn-success">
-          <input type = "hidden" id= "user_id" name = "query_trip_id" value = "<%= @beerbnb.id %>" />
+        <button type="button" class="btn btn-success">
           Yes
         </button>
       </form>
