--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -36,10 +36,10 @@
   </div>
   <div class="row">
     <div style="text-align:left;" class="col">
-      <a href="<%= @beerbnb_air.website %>"> Airbnb Details </a>
+      <a href="<%= @beerbnb_air.website %>" target="_blank" > Airbnb Details </a>
     </div>
     <div style="text-align:left;" class="col">
-      <a href="<%= @beerbnb_bar.website %>"> Bar Details </a>
+      <a href="<%= @beerbnb_bar.website %>" target="_blank" > Bar Details </a>
     </div>
   </div>
 </div>
