--- a/app/views/user_authentication/sign_in.html.erb
+++ b/app/views/user_authentication/sign_in.html.erb
@@ -1,17 +1,17 @@
 <h1>Sign in</h1>
 
 <form action="/user_profile_verify_credentials" method="post">
-  <div>
-    <label for="email_box">Email</label>
-    <input id="email_box" name="query_email" placeholder="Enter your email..." type="text">
+  <div style="width:300px; display:table">
+    <label class="sr-only" for="email_box">Email</label>
+    <input class="form-control mb-2 mr-sm-2" id="email_box" name="query_email" placeholder="Enter your email..." type="text" >
   </div>
 
-  <div>
-    <label for="password_box">Password</label>
-    <input id="password_box" name="query_password" placeholder="Enter your password..." type="password">
+  <div style="width:300px; display:table">
+    <label class="sr-only" for="password_box">Password</label>
+    <input class="form-control mb-2 mr-sm-2"id="password_box" name="query_password" placeholder="Enter your password..." type="password" >
   </div>
 
-  <button>
+  <button class="btn btn-primary mb-2" >
     Sign in
   </button>
 </form>
