--- a/app/views/user_authentication/sign_up.html.erb
+++ b/app/views/user_authentication/sign_up.html.erb
@@ -1,35 +1,36 @@
 <h1>Sign up</h1>
 
 <form action="/insert_user_profile" method="post">
-
-  <div>
-    <label for="email_box">Email</label>
-    <input id="email_box" name="query_email" placeholder="Choose a email..." type="text">
+  <div style="width:300px; display:table">
+    <label class="sr-only" for="email_box"></label>
+    <input class="form-control mb-2 mr-sm-2" id="email_box" name="query_email" placeholder="Enter an email" type="text">
   </div>
                  
-  <div>
-    <label for="first_name_box">First name</label>
+  <div style="width:300px; display:table">
+    <label class="sr-only" for="first_name_box"></label>
       
-    <input type="text" id="first_name_box" name="query_first_name">
+    <input class="form-control mb-2 mr-sm-2" type="text" id="first_name_box" name="query_first_name" placeholder="First name">
   </div>
          
-  <div>
-    <label for="last_name_box">Last name</label>
+  <div style="width:300px; display:table">
+    <label class="sr-only" for="last_name_box"></label>
       
-    <input type="text" id="last_name_box" name="query_last_name">
+    <input class="form-control mb-2 mr-sm-2" type="text" id="last_name_box" name="query_last_name" placeholder="Last name">
   </div>
     
-  <div>
-    <label for="password_box">Password</label>
-    <input id="password_box" name="query_password" placeholder="Choose a password..." type="password">
+  <div style="width:300px; display:table">
+    <label class="sr-only" for="password_box"></label>
+    <input class="form-control mr-sm-2" id="password_box" name="query_password" placeholder="Choose a password" type="password">
   </div>
 
-  <div>
-    <label for="password_confirmation_box">Password Confirmation</label>
-    <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
+  <div style="width:300px; display:table">
+    <label for="password_confirmation_box"></label>
+    <input class="form-control mb-2 mr-sm-2" id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password" type="password">
   </div>
 
-  <button>
+  <br>
+
+  <button class="btn btn-primary mb-2">
     Sign up
   </button>
 </form>
