--- a/app/views/user_authentication/sign_up.html.erb
+++ b/app/views/user_authentication/sign_up.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up</h1>
+<h2>Welcome, Sign Up</h2>
 
 <form action="/insert_user_profile" method="post">
   <div style="width:300px; display:table">
